--- a/login.html
+++ b/login.html
@@ -5,20 +5,34 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./style.css">
+        <script src="./scripts.js" type="text/javascript"></script>
     </head>
     <body>
+        <style>          
+            body { 
+                -webkit-user-select: none;
+                -moz-user-select: none;
+                -moz-user-select: none;
+                user-select: none;
+            }       
+        </style>
         <div class="pseudoParent" >
             <div class="loginPlate">
-                <div class="pseudoParent" >
-                    <div class="loginPlateContent">
-                        <h1>ВОЙТИ</h1>
-                        <ul class="loginInputs">
-                            <li> <input type="text" name="" placeholder="Логин"> </a> </li>
-                            <li> <input type="password" name="" placeholder="Пароль"> </a> </li>
-                            <li> <input type="submit" name="" value="Войти"> </a> </li>
-                        </ul>            
-                    </div>
-                </div>
+                 <h1>ВОЙТИ</h1>                
+                    <div class="pseudoParent" >
+                        <div class="loginPlateContent">                      
+                            <ul class="loginInputs">
+                                <li> <input type="text" name="" placeholder="Логин"> </li>
+                                <li> <input type="password" name="" placeholder="Пароль"> </li>
+                                <li> <input type="submit" name="" value="Войти">  </li>
+                            </ul>       
+                        </div>                    
+                    </div>               
+            </div> 
+            <div class="toRegistration"> 
+                <a href="./registration.html">
+                 <input type="submit" name="" value="Регистрация" onclick="showEmail()"> 
+                 </a>
             </div>
         </div>
     </body>
