--- a/registration.html
+++ b/registration.html
@@ -24,6 +24,7 @@
                             <ul class="loginInputs">
                                 <li> <input type="text" name="" placeholder="Логин"> </li>
                                 <li> <input type="password" name="" placeholder="Пароль"> </li>
+                                <li> <input type="email" name="" placeholder="Email"> </li>
                                 <li> <input type="submit" name="" value="Зарегистрироваться">  </li>
                             </ul>       
                         </div>                    
@@ -31,7 +32,7 @@
                 </div> 
                 <div class="toRegistration"> 
                     <a href="./login.html">
-                        <input type="submit" name="" value="Регистрация" onclick="showEmail()"> 
+                        <input type="submit" name="registration" value="Войти" onclick="showEmail()"> 
                         </a> 
                 </div>
             </div>
